maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: error: value &&! is not a member of Boolean
    if( getY()<getMondeHauteur()-1 &&!aMurNord(getX(),getY()+1) && getIndication(getX(),getY()+1)<ind ){
                                   ^